--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
   ],
   "author": "Mike Evstropov <mike.evstropov@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "@loopback/context": "^4.1.1",
+  "peerDependencies": {
     "@loopback/core": "^3.1.1",
     "@loopback/repository": "^4.1.1",
-    "@loopback/rest": "^11.1.1",
+    "@loopback/rest": "^11.1.1"
+  },
+  "dependencies": {
+    "@loopback/context": "^4.1.1",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@loopback/core": "^3.1.1",
+    "@loopback/repository": "^4.1.1",
+    "@loopback/rest": "^11.1.1",
     "@loopback/testlab": "^4.1.1",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
